background img added as files

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,12 @@
 <app-hero></app-hero>
-
+<app-hero-header></app-hero-header>
+<app-logo></app-logo>
+<app-navigation></app-navigation>
+<app-language-switch></app-language-switch>
+<app-hero-content></app-hero-content>
+<app-badge></app-badge>
+<app-cta></app-cta>
+<app-title></app-title>
+<app-hero-profile></app-hero-profile>
+<app-hero-socials></app-hero-socials>
 <router-outlet />
