--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,13 @@
 <app-hero></app-hero>
 <app-hero-header></app-hero-header>
 <app-logo></app-logo>
-<app-navigation></app-navigation>
+<app-navigation
+  ><app-about-me></app-about-me>
+  <app-skills></app-skills>
+  <app-projects></app-projects>
+  <app-contact></app-contact
+></app-navigation>
+
 <app-language-switch></app-language-switch>
 <app-hero-content></app-hero-content>
 <app-badge></app-badge>
