--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,12 @@
   font-size: inherit;
   color: inherit;
 }
+
+// /* bricolage-grotesque-regular - latin */
+// @font-face {
+//   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+//   font-family: 'Bricolage Grotesque';
+//   font-style: normal;
+//   font-weight: 400;
+//   src: url('../fonts/bricolage-grotesque-v9-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+// }
