nav parts added into it

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,12 +1,7 @@
 <app-hero></app-hero>
 <app-hero-header></app-hero-header>
 <app-logo></app-logo>
-<app-navigation
-  ><app-about-me></app-about-me>
-  <app-skills></app-skills>
-  <app-projects></app-projects>
-  <app-contact></app-contact
-></app-navigation>
+<app-navigation></app-navigation>
 
 <app-language-switch></app-language-switch>
 <app-hero-content></app-hero-content>
