--- a/src/app/sections/hero-header/navigation/navigation.html
+++ b/src/app/sections/hero-header/navigation/navigation.html
@@ -1,1 +1,6 @@
-<div></div>
+<div>
+  <app-about-me></app-about-me>
+  <app-skills></app-skills>
+  <app-projects></app-projects>
+  <app-contact></app-contact>
+</div>
