--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,9 @@
 <app-hero></app-hero>
 <app-hero-header></app-hero-header>
-<app-logo></app-logo>
-<app-navigation></app-navigation>
+<!-- <app-logo></app-logo> -->
+<!-- <app-navigation></app-navigation> -->
 
-<app-language-switch></app-language-switch>
+<!-- <app-language-switch></app-language-switch> -->
 <app-hero-content></app-hero-content>
 <app-badge></app-badge>
 
