--- a/src/app/sections/hero-header/hero-header.html
+++ b/src/app/sections/hero-header/hero-header.html
@@ -1,1 +1,4 @@
-<p>hero-header works!</p>
+<div class="content">
+  <app-logo></app-logo> <app-navigation class="nav-header"></app-navigation>
+  <app-language-switch></app-language-switch>
+</div>
