--- a/src/app/sections/hero-socials/hero-socials.html
+++ b/src/app/sections/hero-socials/hero-socials.html
@@ -1,1 +1,6 @@
-<p>hero-socials works!</p>
+<div class="content">
+  <img src="./img/icons/linkedInIcon.png" alt="" /><img
+    src="./img/icons/gitHubIcon.png"
+    alt=""
+  /><img src="./img/icons/mailIcon.png" alt="" />
+</div>
