--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,13 +9,20 @@
   scroll-behavior: smooth;
   font-size: inherit;
   color: inherit;
+  font-family: 'Bricolage Grotesque';
 }
 
-// /* bricolage-grotesque-regular - latin */
-// @font-face {
-//   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-//   font-family: 'Bricolage Grotesque';
-//   font-style: normal;
-//   font-weight: 400;
-//   src: url('../fonts/bricolage-grotesque-v9-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+// body {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
 // }
+
+@font-face {
+  font-display: swap;
+  font-family: 'Bricolage Grotesque';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../public/fonts/bricolage-grotesque-v9-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
