--- a/src/app/sections/hero-header/hero-header.scss
+++ b/src/app/sections/hero-header/hero-header.scss
@@ -1,10 +1,23 @@
+:host {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .content {
+  color: white;
   width: 100%;
   max-width: 1920px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .nav-header {
-  width: 80%;
+  width: 70%;
 }
