--- a/src/app/sections/hero-content/hero-content.html
+++ b/src/app/sections/hero-content/hero-content.html
@@ -1,1 +1,6 @@
-
+<div class="content">
+  <app-badge class="badge"></app-badge> <app-title class="title"></app-title>
+  <app-title2></app-title2>
+  <app-hero-profile class="profile"></app-hero-profile>
+  <app-cta class="cta"></app-cta>
+</div>
