--- a/src/app/sections/hero-content/title/title.html
+++ b/src/app/sections/hero-content/title/title.html
@@ -1,4 +1,6 @@
 <h1>
-  <span>Frontend</span><br />
-  <span>DEVELOPER</span>
+  <div class="content">
+    <span>Frontend</span><br />
+    <span>DEVELOPER</span>
+  </div>
 </h1>
