--- a/src/app/sections/hero/hero.html
+++ b/src/app/sections/hero/hero.html
@@ -1,1 +1,5 @@
-<section class="hero"><app-hero-header></app-hero-header></section>
+<section class="hero">
+  <app-hero-header></app-hero-header>
+
+  <app-hero-content></app-hero-content>
+</section>
