--- a/src/app/sections/hero/hero.scss
+++ b/src/app/sections/hero/hero.scss
@@ -1,6 +1,7 @@
 .hero {
   height: 100vh;
-  background-image: url('/img/background/01_Hero.png');
+  // background-image: url('./img/background/01_Hero1.png');
+  background-image: url(./img/background/01_Hero1.png);
   background-size: contain;
   background-position: top;
   background-repeat: no-repeat;
