--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,14 +1,7 @@
 <app-hero></app-hero>
 <app-hero-header></app-hero-header>
-<!-- <app-logo></app-logo> -->
-<!-- <app-navigation></app-navigation> -->
 
-<!-- <app-language-switch></app-language-switch> -->
-<app-hero-content></app-hero-content>
-<app-badge></app-badge>
+<!-- <app-hero-content></app-hero-content> -->
 
-<app-title></app-title>
-<app-hero-profile></app-hero-profile>
-<app-cta></app-cta>
 <app-hero-socials></app-hero-socials>
 <router-outlet />
