styling hero section

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,5 +3,5 @@
 
 <!-- <app-hero-content></app-hero-content> -->
 
-<app-hero-socials></app-hero-socials>
+<!-- <app-hero-socials></app-hero-socials> -->
 <router-outlet />
