--- a/src/app/sections/hero-content/title/title.html
+++ b/src/app/sections/hero-content/title/title.html
@@ -1,6 +1,5 @@
 <h1>
   <div class="content">
-    <span>Frontend</span><br />
-    <span>DEVELOPER</span>
+    <span>Frontend</span>
   </div>
 </h1>
