--- a/src/app/sections/hero-header/language-switch/language-switch.html
+++ b/src/app/sections/hero-header/language-switch/language-switch.html
@@ -1,3 +1,5 @@
-<span>EN</span>
-<button>switch</button>
-<span>DE</span>
+<div class="content">
+  <span class="en-span">EN</span>
+  <button class="switch-btn"><span class="slider"></span></button>
+  <span class="de-span">DE</span>
+</div>
