--- a/src/app/sections/hero/hero.html
+++ b/src/app/sections/hero/hero.html
@@ -2,4 +2,5 @@
   <app-hero-header></app-hero-header>
 
   <app-hero-content></app-hero-content>
+  <app-hero-socials></app-hero-socials>
 </section>
