--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,5 +24,13 @@
   font-family: 'Bricolage Grotesque';
   font-style: normal;
   font-weight: 400;
-  src: url('../public/fonts/bricolage-grotesque-v9-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('../public/fonts/bricolage-grotesque-v9-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Kalam';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../public/fonts/kalam-v18-latin-regular.woff2') format('woff2');
 }
