--- a/src/app/sections/hero-content/hero-content.html
+++ b/src/app/sections/hero-content/hero-content.html
@@ -1,6 +1,17 @@
 <div class="content">
-  <app-badge class="badge"></app-badge> <app-title class="title"></app-title>
-  <app-title2></app-title2>
-  <app-hero-profile class="profile"></app-hero-profile>
-  <app-cta class="cta"></app-cta>
+  <div class="outer-container">
+    <div class="inner-container-with-profile">
+      <div class="innermost-container">
+        <app-badge class="badge"></app-badge> <app-title class="title"></app-title>
+      </div>
+
+      <app-hero-profile class="profile"></app-hero-profile>
+    </div>
+    <div class="title-2-container">
+      <app-title2 class="title2"></app-title2>
+    </div>
+    <div class="cta-container">
+      <app-cta class="cta"></app-cta>
+    </div>
+  </div>
 </div>
