--- a/src/app/sections/hero-header/hero-header.scss
+++ b/src/app/sections/hero-header/hero-header.scss
@@ -8,7 +8,7 @@
 }
 
 .content {
-  height: 60px;
+  height: 70px;
   color: white;
   width: 100%;
   max-width: 1920px;
@@ -17,6 +17,7 @@
   align-items: center;
   padding-left: 20px;
   padding-right: 20px;
+  font-size: 18px;
 }
 
 .nav-header {
