--- a/src/app/sections/hero-socials/hero-socials.scss
+++ b/src/app/sections/hero-socials/hero-socials.scss
@@ -2,8 +2,19 @@
   display: flex;
   flex-direction: column;
   height: 200px;
+  padding-left: 20px;
+  padding-right: 20px;
+  width: 100%;
+  max-width: 1920px;
+  padding-top: 40px;
 }
 
 img {
-  width: 50px;
+  width: 40px;
+}
+
+:host {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
