--- a/src/app/sections/hero/hero.scss
+++ b/src/app/sections/hero/hero.scss
@@ -1,10 +1,10 @@
 .hero {
   height: 100vh;
-  // background-image: url('./img/background/01_Hero1.png');
-  background-image: url(./img/background/01_Hero1.png);
+  background-image: url('/img/background/01_Hero1.png');
   background-size: contain;
   background-position: top;
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
