added animation div to navs

--- a/src/app/sections/hero-content/cta/cta.scss
+++ b/src/app/sections/hero-content/cta/cta.scss
@@ -1,9 +1,29 @@
+// .content {
+//   border-color: white;
+//   background-color: transparent;
+//   border-radius: 25px;
+//   padding: 10px;
+//   width: 150px;
+//   border-width: 2px;
+//   box-shadow: 3px 3px;
+// }
+
 .content {
-  border-color: white;
+  border: 2px solid white;
   background-color: transparent;
   border-radius: 25px;
   padding: 10px;
   width: 150px;
-  border-width: 2px;
-  box-shadow: 3px 3px;
+  box-shadow: 3px 3px 0 white;
+  cursor: pointer;
+
+  transition:
+    transform 0.12s cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 0.12s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.content:active {
+  transform: translate(3px, 3px);
+  box-shadow: 0 0 0 white;
+  background-color: #f87a55;
 }
