--- a/src/app/sections/hero-socials/hero-socials.html
+++ b/src/app/sections/hero-socials/hero-socials.html
@@ -1,6 +1,5 @@
 <div class="content">
-  <img src="./img/icons/linkedInIcon.png" alt="" /><img
-    src="./img/icons/gitHubIcon.png"
-    alt=""
-  /><img src="./img/icons/mailIcon.png" alt="" />
+  <div class="img-border bottom-to-top"><img src="./img/icons/linkedInIcon.png" alt="" /></div>
+  <div class="img-border"><img src="./img/icons/gitHubIcon.png" alt="" /></div>
+  <div class="img-border"><img src="./img/icons/mailIcon.png" alt="" /></div>
 </div>
