--- a/src/app/sections/hero-socials/hero-socials.scss
+++ b/src/app/sections/hero-socials/hero-socials.scss
@@ -7,6 +7,7 @@
   width: 100%;
   max-width: 1920px;
   padding-top: 40px;
+  gap: 8px;
 }
 
 img {
@@ -17,4 +18,24 @@ img {
   width: 100%;
   display: flex;
   justify-content: center;
+}
+
+.img-border {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  border: 1px solid white;
+  border-radius: 50%;
+  background: radial-gradient(circle at 50% 120%, blue 0%, blue 55%, blue 100%);
+  background-size: 100% 0%;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  transition: background-size 0.4s ease;
+}
+
+.img-border:hover {
+  background-size: 100% 100%;
+  cursor: pointer;
 }
