--- a/src/app/sections/hero-header/navigation/projects/projects.scss
+++ b/src/app/sections/hero-header/navigation/projects/projects.scss
@@ -2,29 +2,28 @@
   position: relative;
   display: inline-block;
   padding: 6px 12px;
-  overflow: hidden;
 }
 
 .animation-container::before {
   content: '';
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 0%;
-  height: 100%;
+  top: -10px;
+  bottom: -10px;
+  left: -10px;
+  right: -10px;
 
-  background-color: rgba(255, 0, 0, 0.2);
-
+  background-image: url('/img/00_Hand-drawn-lines/00_Header/color-option-1/3.png');
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: left center;
-
-  transition: width 0.4s ease;
-  z-index: 0;
+  background-position: center;
+  clip-path: inset(0 100% 0 0);
+  transition: clip-path 0.4s ease-in-out;
+  z-index: 2;
+  pointer-events: none;
 }
 
 .animation-container:hover::before {
-  width: 100%;
+  clip-path: inset(0 0 0 0);
 }
 
 .content {
