language switch animation added

--- a/src/app/sections/hero-header/language-switch/language-switch.html
+++ b/src/app/sections/hero-header/language-switch/language-switch.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <span class="en-span">EN</span>
+  <button class="language-btn animation-container"><span class="en-span content">EN</span></button>
   <button class="switch-btn"><span class="slider"></span></button>
-  <span class="de-span">DE</span>
+  <button class="language-btn animation-container"><span class="de-span content">DE</span></button>
 </div>
