added badge animation

--- a/src/app/sections/hero-content/badge/badge.html
+++ b/src/app/sections/hero-content/badge/badge.html
@@ -1,1 +1,4 @@
-<button class="content">Hello world</button>
+<button class="content">
+  <span class="button-text">Hello world</span>
+  <img src="/img/additionals/waving_hand.png" class="hand-icon" alt="Winkende Hand" />
+</button>
