profile pic animated

--- a/src/app/sections/hero-profile/hero-profile.html
+++ b/src/app/sections/hero-profile/hero-profile.html
@@ -1,2 +1,7 @@
-<img src="./img\03_Stickers\Polaroid Frame.png" alt="" />
-<span class="name-tag">Kelly :)</span>
+<div class="polaroid-wrapper">
+  <img src="/img/additionals/profile-pic.jpeg" class="photo" alt="Foto" />
+
+  <img src="./img/03_Stickers/Polaroid Frame.png" class="frame" alt="" />
+
+  <span class="name-tag"> Kelly <span class="smiley">:)</span> </span>
+</div>
