--- a/src/app/sections/hero-content/title2/title2.html
+++ b/src/app/sections/hero-content/title2/title2.html
@@ -1,3 +1,6 @@
-<div class="content">
-  <span>DEVELOPER</span>
-</div>
+<h1>
+  <div class="content">
+    <span>D</span><span>E</span><span>V</span><span>E</span><span>L</span><span>O</span
+    ><span>P</span><span>E</span><span>R</span>
+  </div>
+</h1>
