--- a/src/app/sections/hero-content/title/title.html
+++ b/src/app/sections/hero-content/title/title.html
@@ -1,5 +1,6 @@
 <h1>
   <div class="content">
-    <span>Frontend</span>
+    <span>F</span><span>r</span><span>o</span><span>n</span><span>t</span><span>e</span
+    ><span>n</span><span>d</span>
   </div>
 </h1>
