cta about me styled

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,6 @@
 <app-hero></app-hero>
 <app-hero-header></app-hero-header>
 
-<!-- <app-hero-content></app-hero-content> -->
+<app-about-me-section></app-about-me-section>
 
-<!-- <app-hero-socials></app-hero-socials> -->
 <router-outlet />
