--- a/src/app/sections/about-me-section/about-me-section.html
+++ b/src/app/sections/about-me-section/about-me-section.html
@@ -1,1 +1,3 @@
-<p>about-me-section works!</p>
+<app-location-snippets></app-location-snippets>
+<app-about-me-information></app-about-me-information>
+<app-about-me-cta></app-about-me-cta>
