about me informations basic styling

--- a/src/app/sections/about-me-section/about-me-information/about-me-information.html
+++ b/src/app/sections/about-me-section/about-me-information/about-me-information.html
@@ -1,1 +1,15 @@
-<p>about-me-information works!</p>
+<div class="content">
+  <h3>WHO'S KELLY?</h3>
+  <h2>About me</h2>
+  <img class="img" src="/img/00_Hand-drawn-lines/01_About-me/1.png" alt="" />
+  <br />
+  <span
+    >I’m a Frontend Developer who views code as a form of modern-day sorcery. I love the challenge
+    of transforming a blank page into an immersive, interactive experience—blending clean logic with
+    creative design. I draw my drive from the complex magic systems in the fantasy novels I read.
+    Just like a great story, a great interface needs internal consistency and a touch of wonder. I’m
+    constantly learning new "spells" in my tech stack to ensure every user journey feels effortless
+    and enchanting. When the screen goes dark, you’ll find me with a cup of tea and a fantasy epic
+    in hand—always curious, always dreaming up the next build. </span
+  ><br /><span>Let's collaborate and build something remarkable together!</span>
+</div>
