--- a/src/app/sections/about-me-section/location-snippets/location-snippets.html
+++ b/src/app/sections/about-me-section/location-snippets/location-snippets.html
@@ -1,1 +1,25 @@
-<div><img src="" alt="" /><img src="" alt="" /><img src="" alt="" /></div>
+<div class="content">
+  <div class="paper-wrapper">
+    <img class="paper-bg" src="\img\02_Ripped-Paper\option-1\yellow.png" alt="Gelbes Papier" />
+    <div class="overlay">
+      <img src="\img\additionals\locations1.png" class="overlay-icon" alt="Icon 1" />
+      <span class="overlay-text">Based near Nuremberg</span>
+    </div>
+  </div>
+
+  <div class="paper-wrapper">
+    <img class="paper-bg" src="\img\02_Ripped-Paper\option-1\blue.png" alt="Blaues Papier" />
+    <div class="overlay">
+      <img src="\img\additionals\travel.png" class="overlay-icon" alt="Icon 2" />
+      <span class="overlay-text">Open to travel</span>
+    </div>
+  </div>
+
+  <div class="paper-wrapper">
+    <img class="paper-bg" src="\img\02_Ripped-Paper\option-1\orange.png" alt="Oranges Papier" />
+    <div class="overlay">
+      <img src="\img\additionals\remote.png" class="overlay-icon" alt="Icon 3" />
+      <span class="overlay-text">Open to work remote</span>
+    </div>
+  </div>
+</div>
