about animation added

--- a/src/app/sections/about-me-section/about-me-section.html
+++ b/src/app/sections/about-me-section/about-me-section.html
@@ -1,3 +1,7 @@
-<app-location-snippets></app-location-snippets>
-<app-about-me-information></app-about-me-information>
-<app-about-me-cta></app-about-me-cta>
+<div class="content">
+  <app-location-snippets></app-location-snippets>
+  <div class="inner-content">
+    <app-about-me-information></app-about-me-information>
+    <div class="cta-btn-container"><app-about-me-cta></app-about-me-cta></div>
+  </div>
+</div>
