--- a/src/app/sections/about-me-section/about-me-information/about-me-information.html
+++ b/src/app/sections/about-me-section/about-me-information/about-me-information.html
@@ -1,7 +1,6 @@
 <div class="content">
   <h3>WHO'S KELLY?</h3>
-  <h2>About me</h2>
-  <img class="img" src="/img/00_Hand-drawn-lines/01_About-me/1.png" alt="" />
+  <div class="animation-container"><h2>About me</h2></div>
   <br />
   <span
     >I’m a Frontend Developer who views code as a form of modern-day sorcery. I love the challenge
