--- a/src/app/sections/about-me-section/about-me-information/about-me-information.scss
+++ b/src/app/sections/about-me-section/about-me-information/about-me-information.scss
@@ -14,3 +14,24 @@ h3 {
 img {
   width: 300px;
 }
+
+.animation-container::before {
+  content: '';
+  position: absolute;
+  top: 0px;
+  bottom: -70px;
+  left: -10px;
+  right: -10px;
+
+  background-image: url('/img/00_Hand-drawn-lines/01_About-me/1.png');
+  background-repeat: no-repeat;
+  background-size: 400px;
+  background-position: left;
+  clip-path: inset(0 100% 0 0);
+  transition: clip-path 0.4s ease-in-out;
+  z-index: 2;
+}
+
+.animation-container:hover::before {
+  clip-path: inset(0 0 0 0);
+}
