--- a/src/app/sections/skill-set/skill-title/skill-title.html
+++ b/src/app/sections/skill-set/skill-title/skill-title.html
@@ -1,1 +1,4 @@
-<p>skill-title works!</p>
+<div class="content">
+  <div><h3>MY STACK</h3></div>
+  <div class="animation-container"><h2>Skillset</h2></div>
+</div>
