stack description added, new icons uploaded

--- a/src/app/sections/skill-set/skill-set.html
+++ b/src/app/sections/skill-set/skill-set.html
@@ -1,1 +1,3 @@
-<app-skill-title></app-skill-title>
+<section class="content">
+  <app-skill-title></app-skill-title> <app-stack-describtion></app-stack-describtion>
+</section>
