--- a/src/app/sections/skill-set/stack-describtion/stack-describtion.html
+++ b/src/app/sections/skill-set/stack-describtion/stack-describtion.html
@@ -1,1 +1,9 @@
-<p>stack-describtion works!</p>
+<div class="content">
+  <span>
+    I specialize in building scalable, high-performance web applications using Angular and
+    TypeScript.I build clean, responsive interfaces using HTML, CSS, and JS, with a focus on
+    efficient REST API consumption and collaborative version control via Git. My greatest skill
+    isn't just the code I write today, but my ability to learn the technologies of tomorrow. I’m
+    always looking for the next challenge to expand my stack and refine my craft.</span
+  >
+</div>
