stack icons added with minimal styling

--- a/src/app/sections/skill-set/stack-icons/stack-icons.html
+++ b/src/app/sections/skill-set/stack-icons/stack-icons.html
@@ -1,1 +1,12 @@
-<p>stack-icons works!</p>
+<div class="content">
+  <img src="\img\additionals\Capa_1.png" alt="" /><img
+    src="\img\additionals\Capa_2.png"
+    alt=""
+  /><img src="\img\additionals\Capa_3.png" alt="" /><img
+    src="\img\additionals\Capa_4.png"
+    alt=""
+  /><img src="\img\additionals\Capa_5.png" alt="" /><img
+    src="\img\additionals\Capa_6.png"
+    alt=""
+  /><img src="\img\additionals\Capa_7.png" alt="" />
+</div>
