--- a/src/app/sections/skill-set/skill-set.html
+++ b/src/app/sections/skill-set/skill-set.html
@@ -1,3 +1,4 @@
 <section class="content">
   <app-skill-title></app-skill-title> <app-stack-describtion></app-stack-describtion>
+  <app-stack-icons></app-stack-icons>
 </section>
