pull badge implemented, almost finished

--- a/src/app/sections/skill-set/pull-badge/pull-badge.html
+++ b/src/app/sections/skill-set/pull-badge/pull-badge.html
@@ -1,1 +1,14 @@
-<div><img src="" alt="" /></div>
+<div class="sticker-container">
+  <input type="checkbox" id="peel-trigger" class="peel-checkbox" />
+  <label for="peel-trigger" class="sticker-wrapper">
+    <img src="/img/03_Stickers/peel-off/1.png" class="sticker img-1" alt="" />
+    <img src="/img/03_Stickers/peel-off/2.png" class="sticker img-2" alt="" />
+    <img src="/img/03_Stickers/peel-off/3.png" class="sticker img-3" alt="" />
+
+    <span class="sticker-text"
+      >Pull to <br />
+      Peel</span
+    >
+    <img src="/img/03_Stickers/Arrow.png" class="sticker-arrow" alt="" />
+  </label>
+</div>
