skill-set placed correctly

--- a/src/app/sections/skill-set/pull-badge/pull-badge.html
+++ b/src/app/sections/skill-set/pull-badge/pull-badge.html
@@ -10,5 +10,8 @@
       Peel</span
     >
     <img src="/img/03_Stickers/Arrow.png" class="sticker-arrow" alt="" />
+
+    <span class="finish-text">I'm currently looking into:</span>
+    <img src="" class="finish-img" alt="" />
   </label>
 </div>
