--- a/src/app/sections/skill-set/skill-set.html
+++ b/src/app/sections/skill-set/skill-set.html
@@ -1,4 +1,16 @@
 <section class="content">
-  <app-skill-title></app-skill-title> <app-stack-describtion></app-stack-describtion>
-  <app-stack-icons></app-stack-icons><app-pull-badge></app-pull-badge>
+  <div class="main-layout">
+    <div class="left-col">
+      <app-skill-title></app-skill-title>
+    </div>
+
+    <div class="right-col">
+      <app-stack-describtion></app-stack-describtion>
+      <app-stack-icons></app-stack-icons>
+    </div>
+  </div>
+
+  <div class="badge-wrapper">
+    <app-pull-badge></app-pull-badge>
+  </div>
 </section>
