added new files, started with project-examples

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,5 +2,6 @@
 
 <app-about-me-section></app-about-me-section>
 <app-skill-set></app-skill-set>
+<app-projects-component></app-projects-component>
 
 <router-outlet />
