--- a/src/app/sections/projects-component/project-examples/project-examples.html
+++ b/src/app/sections/projects-component/project-examples/project-examples.html
@@ -1,1 +1,8 @@
-<p>project-examples works!</p>
+<div class="content">
+  <div class="preview-container"></div>
+  <h3>El Pollo Loco</h3>
+  <p>
+    Jump, run and throw game based on object-oriented approach. Help Pepe to find coins and tabasco
+    salsa to fight the crazy hen.
+  </p>
+</div>
