--- a/src/app/sections/projects-component/projects-component.html
+++ b/src/app/sections/projects-component/projects-component.html
@@ -1,1 +1,3 @@
-<p>projects-component works!</p>
+<section class="content">
+  <app-projects-main></app-projects-main><app-project-examples></app-project-examples>
+</section>
