--- a/src/app/sections/projects-component/projects-main/projects-main.html
+++ b/src/app/sections/projects-component/projects-main/projects-main.html
@@ -1,1 +1,13 @@
-<p>projects-main works!</p>
+<div class="content">
+  <h3>MY CRAFT</h3>
+  <div class="animation-container"><h2>Projects</h2></div>
+  <br />
+  <span
+    >I invite you to interact with these projects to see my approach to the modern web—where I
+    prioritize writing efficient, lean code to build interfaces that are as responsive as they are
+    intuitive. For me, a great project isn't just about how it looks, but how effortlessly it moves
+    and responds to the user. I'm always learning and refining my process, so I’d love for you to
+    explore the builds and see how I bridge the gap between complex code and a seamless user
+    journey.</span
+  >
+</div>
