--- a/src/app/sections/projects-component/project-examples/project-examples.scss
+++ b/src/app/sections/projects-component/project-examples/project-examples.scss
@@ -1,18 +1,5 @@
-h2 {
-  font-size: 64px;
-}
-
-.content {
+.projects-wrapper {
   display: flex;
-  flex-direction: column;
-}
-
-.preview-container {
-  width: 500px;
-  height: 400px;
-  border-radius: 25px;
-  background-image: url('/img/projects/Pollo-png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  gap: 40px;
+  align-items: center;
 }
