--- a/src/app/sections/projects-component/project-card/project-card.scss
+++ b/src/app/sections/projects-component/project-card/project-card.scss
@@ -6,11 +6,16 @@ h3 {
 
 p {
   margin: 0;
-  color: #444;
+}
+
+.card-wrapper {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
 }
 
 .preview-container {
-  width: 500px;
+  width: 100%;
   height: 350px;
   border-radius: 25px;
   overflow: hidden;
