peer review title added

--- a/src/app/sections/peer-reviews/peer-reviews.html
+++ b/src/app/sections/peer-reviews/peer-reviews.html
@@ -1,1 +1,4 @@
-<p>peer-reviews works!</p>
+<section class="content">
+  <app-review-title></app-review-title>
+  <app-review-cards></app-review-cards>
+</section>
