--- a/src/app/sections/peer-reviews/review-title/review-title.html
+++ b/src/app/sections/peer-reviews/review-title/review-title.html
@@ -1,1 +1,4 @@
-<p>review-title works!</p>
+<div class="content">
+  <div class="animation-container"><h3>IN THEIR WORDS</h3></div>
+  <h2>Colleagues' Thoughts</h2>
+</div>
