--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,5 +3,6 @@
 <app-about-me-section></app-about-me-section>
 <app-skill-set></app-skill-set>
 <app-projects-component></app-projects-component>
+<app-peer-reviews></app-peer-reviews>
 
 <router-outlet />
