--- a/src/app/sections/peer-reviews/review-title/review-title.scss
+++ b/src/app/sections/peer-reviews/review-title/review-title.scss
@@ -1,8 +1,3 @@
-.content {
-  display: flex;
-  flex-direction: column;
-}
-
 h2 {
   font-size: 64px;
 }
@@ -11,26 +6,32 @@ h3 {
   font-size: 24px;
 }
 
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  text-align: right;
+  padding-bottom: 24px;
+}
+
 .animation-container {
   position: relative;
   display: inline-block;
-  padding-bottom: 48px;
+  padding-left: 80px;
 }
 
 .animation-container::before {
   content: '';
   position: absolute;
-  top: -20px;
-  bottom: -20px;
-  left: -20px;
-  right: -20px;
-
-  background-image: url('/img/00_Hand-drawn-lines/03_Portfolio/1.png');
+  left: 0;
+  top: 20%;
+  width: 80px;
+  height: 80px;
+  background-image: url('/img/00_Hand-drawn-lines/04_Testimonials/1.png');
   background-repeat: no-repeat;
   background-size: contain;
-  clip-path: inset(0 100% 0 0);
+  clip-path: inset(0 0 0 100%);
   transition: clip-path 0.4s ease-in-out;
-  z-index: 2;
 }
 
 .animation-container:hover::before {
