added img to reviw cards

--- a/src/app/sections/peer-reviews/review-cards/review-cards.html
+++ b/src/app/sections/peer-reviews/review-cards/review-cards.html
@@ -1,1 +1,6 @@
-<p>review-cards works!</p>
+<div>
+  <img src="/img/03_Stickers/02_Testimonials/A.png" alt="" /><img
+    src="/img/03_Stickers/02_Testimonials/B.png"
+    alt=""
+  /><img src="/img/03_Stickers/02_Testimonials/A.png" alt="" />
+</div>
