review cards styled

--- a/src/app/sections/peer-reviews/review-cards/review-cards.html
+++ b/src/app/sections/peer-reviews/review-cards/review-cards.html
@@ -1,6 +1,55 @@
-<div>
-  <img src="/img/03_Stickers/02_Testimonials/A.png" alt="" /><img
-    src="/img/03_Stickers/02_Testimonials/B.png"
-    alt=""
-  /><img src="/img/03_Stickers/02_Testimonials/A.png" alt="" />
+<div class="sticker-container">
+  <div class="sticker-wrapper">
+    <img src="/img/03_Stickers/02_Testimonials/color1/A.png" class="main-img" />
+    <img src="/img/03_Stickers/02_Testimonials/color1/Hover.png" class="overlay-img" />
+    <div class="sticker-text">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, nobis nihil totam alias
+      voluptatibus reiciendis ipsa illo sapiente cumque adipisci quas molestiae placeat
+      necessitatibus quam provident labore at quos vel!
+    </div>
+    <div class="sticker-info">
+      <span class="name">Max Mustermann</span>
+      <span class="title">Frontend Developer</span>
+    </div>
+    <a href="#" class="sticker-link">
+      <img src="/img/icons/linkedInIcon.png" alt="" class="link-icon" />
+      <span>Profile</span>
+    </a>
+  </div>
+
+  <div class="sticker-wrapper">
+    <img src="/img/03_Stickers/02_Testimonials/color1/B.png" class="main-img" />
+    <img src="/img/03_Stickers/02_Testimonials/color1/Hover.png" class="overlay-img" />
+    <div class="sticker-text">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus tempore, itaque dolores
+      nihil, facere odit corrupti id magni sit, quasi labore eius doloribus ipsa hic adipisci
+      explicabo perferendis reiciendis ipsam?
+    </div>
+    <div class="sticker-info">
+      <span class="name">Max Mustermann</span>
+      <span class="title">Frontend Developer</span>
+    </div>
+    <a href="#" class="sticker-link">
+      <img src="/img/icons/linkedInIcon.png" alt="" class="link-icon" />
+      <span>Profile</span>
+    </a>
+  </div>
+
+  <div class="sticker-wrapper">
+    <img src="/img/03_Stickers/02_Testimonials/color1/A.png" class="main-img" />
+    <img src="/img/03_Stickers/02_Testimonials/color1/Hover.png" class="overlay-img" />
+    <div class="sticker-text">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi ad dicta sunt atque magnam
+      totam accusamus deleniti exercitationem nisi cupiditate dolor, quibusdam commodi non magni
+      expedita saepe impedit optio sequi.
+    </div>
+    <div class="sticker-info">
+      <span class="name">Max Mustermann</span>
+      <span class="title">Frontend Developer</span>
+    </div>
+    <a href="#" class="sticker-link">
+      <img src="/img/icons/linkedInIcon.png" alt="" class="link-icon" />
+      <span>Profile</span>
+    </a>
+  </div>
 </div>
