--- a/src/app/sections/peer-reviews/review-cards/review-cards.scss
+++ b/src/app/sections/peer-reviews/review-cards/review-cards.scss
@@ -1,3 +1,130 @@
-img {
-  width: 200px;
+.sticker-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+
+  &:has(.sticker-wrapper:nth-child(3):hover) {
+    .sticker-wrapper:nth-child(1) {
+      z-index: 0;
+    }
+  }
+}
+
+.sticker-wrapper {
+  width: 500px;
+  margin: 0 -95px;
+  position: relative;
+  transition: z-index 0s;
+
+  &:nth-child(1) {
+    transform: translateY(-10px) rotate(-8deg);
+    z-index: 3;
+  }
+  &:nth-child(2) {
+    z-index: 2;
+  }
+  &:nth-child(3) {
+    transform: translateY(-10px) rotate(8deg);
+    z-index: 1;
+  }
+
+  &:hover {
+    z-index: 10;
+    cursor: pointer;
+
+    .overlay-img {
+      opacity: 1;
+    }
+
+    .sticker-info .name,
+    .sticker-info .title {
+      color: #ffffff;
+    }
+  }
+}
+.main-img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.overlay-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  z-index: 2;
+}
+
+.sticker-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  font-weight: 800;
+  padding: 40px;
+  box-sizing: border-box;
+  z-index: 5;
+}
+
+.sticker-info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  padding: 40px;
+  box-sizing: border-box;
+  z-index: 5;
+
+  .name {
+    font-weight: bold;
+    font-size: 20px;
+    transition: color 0.3s ease;
+  }
+
+  .title {
+    font-weight: 400;
+    font-size: 18px;
+    transition: color 0.3s ease;
+  }
+}
+
+.sticker-link {
+  position: absolute;
+  bottom: 40px;
+  right: 40px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  text-decoration: none;
+  z-index: 6;
+
+  span {
+    color: #000;
+    font-weight: bold;
+    font-size: 16px;
+    transition: color 0.3s ease;
+  }
+
+  .link-icon {
+    width: 20px;
+    height: auto;
+  }
+
+  &:hover span {
+    color: #ffffff;
+  }
 }
