--- a/src/app/sections/peer-reviews/peer-reviews.scss
+++ b/src/app/sections/peer-reviews/peer-reviews.scss
@@ -4,3 +4,12 @@
   justify-content: center;
   align-items: center;
 }
+
+.content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1920px;
+  padding-bottom: 120px;
+  padding-top: 50px;
+}
