added simple outline for contact main

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,5 +4,6 @@
 <app-skill-set></app-skill-set>
 <app-projects-component></app-projects-component>
 <app-peer-reviews></app-peer-reviews>
+<app-contact-component></app-contact-component>
 
 <router-outlet />
