--- a/src/app/sections/contact-component/contact-component.html
+++ b/src/app/sections/contact-component/contact-component.html
@@ -1,1 +1,4 @@
-<p>contact-component works!</p>
+<section class="content">
+  <div><app-contact-main></app-contact-main> <app-contact-form></app-contact-form></div>
+  <app-footer></app-footer>
+</section>
