--- a/src/app/sections/contact-component/contact-main/contact-main.html
+++ b/src/app/sections/contact-component/contact-main/contact-main.html
@@ -1,1 +1,16 @@
-<p>contact-main works!</p>
+<div class="content">
+  <h3>CONTACT ME</h3>
+  <h2>Ready to work together?</h2>
+  <p>
+    I’m on the lookout for a new team where I can dive into complex problems and deliver elegant
+    frontend solutions. My goal is always to leave a codebase better than I found it and to create
+    interfaces that users truly enjoy. I am committed to staying at the forefront of web
+    technologies, and I’m confident that my blend of technical expertise and enthusiasm for growth
+    will make a meaningful impact on your mission.
+  </p>
+  <br />
+  <p>
+    I’m ready to hit the ground running on a fresh project—let’s discuss how my skills can help your
+    team achieve its goals.
+  </p>
+</div>
