--- a/src/app/sections/contact-component/contact-main/contact-main.html
+++ b/src/app/sections/contact-component/contact-main/contact-main.html
@@ -13,7 +13,7 @@
     I’m ready to hit the ground running on a fresh project—let’s discuss how my skills can help your
     team achieve its goals.
   </p>
-  <div>
+  <div class="line-container">
     <img class="animation-container" src="/img/00_Hand-drawn-lines/05_Contact/1.png" alt="" />
   </div>
 </div>
