--- a/src/app/sections/contact-component/contact-main/contact-main.scss
+++ b/src/app/sections/contact-component/contact-main/contact-main.scss
@@ -8,6 +8,8 @@ h3 {
 
 .content {
   color: #f8f9fa;
+  width: 50%;
+  padding-left: 40px;
 }
 
 .animation-container {
@@ -30,4 +32,10 @@ h3 {
   100% {
     clip-path: inset(0 0 0 100%);
   }
+}
+
+.line-container {
+  padding-top: 40px;
+  display: flex;
+  justify-content: end;
 }
